tests/snapshots/printf_general_rejected.snap
---
source: tests/snapshot.rs
expression: rust
---
#![feature(c_variadic)]
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

unsafe extern "C" {
    fn printf(_0: *const i8, ...) -> i32;
}

fn main() {
    let mut __retval: i32 = 0;
    let mut x: f64 = 0.0;
    let mut prec: i32 = 0;
    let _v0: i32 = 0;
    __retval = _v0;
    let _v1: f64 = 1234.5678;
    x = _v1;
    let _v2: i32 = 3;
    prec = _v2;
    let _v3: *mut i8 = b"%g %.3g %-10.3g\n\0".as_ptr() as *mut i8;
    let _v4: f64 = x;
    let _v5: f64 = x;
    let _v6: f64 = x;
    let _v7: i32 = unsafe { printf(_v3 as *const i8, _v4, _v5, _v6) };
    let _v8: *mut i8 = b"%G %.3G\n\0".as_ptr() as *mut i8;
    let _v9: f64 = x;
    let _v10: f64 = x;
    let _v11: i32 = unsafe { printf(_v8 as *const i8, _v9, _v10) };
    let _v12: *mut i8 = b"%.*g\n\0".as_ptr() as *mut i8;
    let _v13: i32 = prec;
    let _v14: f64 = x;
    let _v15: i32 = unsafe { printf(_v12 as *const i8, _v13, _v14) };
    let _v16: *mut i8 = b"% g\n\0".as_ptr() as *mut i8;
    let _v17: f64 = x;
    let _v18: i32 = unsafe { printf(_v16 as *const i8, _v17) };
    let _v19: i32 = 0;
    __retval = _v19;
    let _v20: i32 = __retval;
    std::process::exit(_v20 as i32);
}
