tests/snapshots/printf_literal_escaping.snap
---
source: tests/snapshot.rs
expression: rust
---
#![feature(c_variadic)]
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

unsafe extern "C" {
    fn printf(_0: *const i8, ...) -> i32;
}

fn main() {
    let mut __retval: i32 = 0;
    let mut d: i32 = 0;
    let mut h: u32 = 0;
    let _v0: i32 = 0;
    __retval = _v0;
    let _v1: i32 = 5;
    d = _v1;
    let _v2: u32 = 171;
    h = _v2;
    let _v3: *mut i8 = b"{%d} %% \"quoted\" back\\slash %s|%c|%x\n\0".as_ptr() as *mut i8;
    let _v4: i32 = d;
    let _v5: *mut i8 = b"hi\0".as_ptr() as *mut i8;
    let _v6: i32 = 88;
    let _v7: u32 = h;
    let _v8: i32 = unsafe { printf(_v3 as *const i8, _v4, _v5, _v6, _v7) };
    let _v9: *mut i8 = b"}}%%{{%d}}\n\0".as_ptr() as *mut i8;
    let _v10: i32 = d;
    let _v11: i32 = unsafe { printf(_v9 as *const i8, _v10) };
    let _v12: *mut i8 = b"%%%%%d%%%%\n\0".as_ptr() as *mut i8;
    let _v13: i32 = d;
    let _v14: i32 = unsafe { printf(_v12 as *const i8, _v13) };
    let _v15: *mut i8 = b"{{}}%s{{}}\n\0".as_ptr() as *mut i8;
    let _v16: *mut i8 = b"mid\0".as_ptr() as *mut i8;
    let _v17: i32 = unsafe { printf(_v15 as *const i8, _v16) };
    let _v18: i32 = 0;
    __retval = _v18;
    let _v19: i32 = __retval;
    std::process::exit(_v19 as i32);
}
