tests/snapshots/printf_narrow_length_modifiers.snap
---
source: tests/snapshot.rs
expression: rust
---
#![feature(c_variadic)]
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

unsafe extern "C" {
    fn printf(_0: *const i8, ...) -> i32;
}

fn main() {
    let mut __retval: i32 = 0;
    let mut s: i16 = 0;
    let mut us: u16 = 0;
    let mut c: i8 = 0;
    let mut uc: u8 = 0;
    let mut j: i64 = 0;
    let mut ju: u64 = 0;
    let mut t: i64 = 0;
    let mut full_int: i32 = 0;
    let mut negative: i32 = 0;
    let mut wide: u32 = 0;
    let _v0: i32 = 0;
    __retval = _v0;
    let _v1: i16 = 300;
    s = _v1;
    let _v2: u16 = 60000;
    us = _v2;
    let _v3: i8 = -5;
    c = _v3;
    let _v4: u8 = 200;
    uc = _v4;
    let _v5: i64 = 123456789;
    j = _v5;
    let _v6: u64 = 123456789;
    ju = _v6;
    let _v7: i64 = -7;
    t = _v7;
    let _v8: *mut i8 = b"%hd %hu %hhd %hhu %jd %ju %td\n\0".as_ptr() as *mut i8;
    let _v9: i16 = s;
    let _v10: i32 = _v9 as i32;
    let _v11: u16 = us;
    let _v12: i32 = _v11 as i32;
    let _v13: i8 = c;
    let _v14: i32 = _v13 as i32;
    let _v15: u8 = uc;
    let _v16: i32 = _v15 as i32;
    let _v17: i64 = j;
    let _v18: u64 = ju;
    let _v19: i64 = t;
    let _v20: i32 = unsafe { printf(_v8 as *const i8, _v10, _v12, _v14, _v16, _v17, _v18, _v19) };
    let _v21: i32 = 300;
    full_int = _v21;
    let _v22: i32 = -1;
    negative = _v22;
    let _v23: u32 = 70000;
    wide = _v23;
    let _v24: *mut i8 = b"%hhd %hhd %hhu %hd %hu\n\0".as_ptr() as *mut i8;
    let _v25: i32 = full_int;
    let _v26: u8 = uc;
    let _v27: i32 = _v26 as i32;
    let _v28: i32 = negative;
    let _v29: u32 = wide;
    let _v30: u32 = wide;
    let _v31: i32 = unsafe { printf(_v24 as *const i8, _v25, _v27, _v28, _v29, _v30) };
    let _v32: i32 = 0;
    __retval = _v32;
    let _v33: i32 = __retval;
    std::process::exit(_v33 as i32);
}
