tests/snapshots/printf_narrow_length_modifiers_precision_alternate.snap
---
source: tests/snapshot.rs
expression: rust
---
#![feature(c_variadic)]
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

unsafe extern "C" {
    fn printf(_0: *const i8, ...) -> i32;
}

fn main() {
    let mut __retval: i32 = 0;
    let mut a: i32 = 0;
    let mut b: i32 = 0;
    let mut c: u32 = 0;
    let _v0: i32 = 0;
    __retval = _v0;
    let _v1: i32 = 300;
    a = _v1;
    let _v2: i32 = -5;
    b = _v2;
    let _v3: u32 = 400;
    c = _v3;
    let _v4: *mut i8 = b"%.2hhd %.3hd %#hhx %08hhx\n\0".as_ptr() as *mut i8;
    let _v5: i32 = a;
    let _v6: i32 = b;
    let _v7: i32 = a;
    let _v8: i32 = a;
    let _v9: i32 = unsafe { printf(_v4 as *const i8, _v5, _v6, _v7, _v8) };
    let _v10: *mut i8 = b"%.4hho %.2hhx %hhu\n\0".as_ptr() as *mut i8;
    let _v11: i32 = a;
    let _v12: i32 = a;
    let _v13: u32 = c;
    let _v14: i32 = unsafe { printf(_v10 as *const i8, _v11, _v12, _v13) };
    let _v15: *mut i8 = b"%.5hd %#hx\n\0".as_ptr() as *mut i8;
    let _v16: i32 = b;
    let _v17: u32 = c;
    let _v18: i32 = unsafe { printf(_v15 as *const i8, _v16, _v17) };
    let _v19: i32 = 0;
    __retval = _v19;
    let _v20: i32 = __retval;
    std::process::exit(_v20 as i32);
}
