tests/snapshots/printf_partial_conversion.snap
---
source: tests/snapshot.rs
expression: rust
---
#![feature(c_variadic)]
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

unsafe extern "C" {
    fn printf(_0: *const i8, ...) -> i32;
}

fn main() {
    let mut __retval: i32 = 0;
    let _v0: i32 = 0;
    __retval = _v0;
    let _v1: *mut i8 = b"first %d\n\0".as_ptr() as *mut i8;
    let _v2: i32 = 1;
    let _v3: i32 = unsafe { printf(_v1 as *const i8, _v2) };
    let _v4: *mut i8 = b"dynamic %*d\n\0".as_ptr() as *mut i8;
    let _v5: i32 = 5;
    let _v6: i32 = 2;
    let _v7: i32 = unsafe { printf(_v4 as *const i8, _v5, _v6) };
    let _v8: *mut i8 = b"last %d\n\0".as_ptr() as *mut i8;
    let _v9: i32 = 3;
    let _v10: i32 = unsafe { printf(_v8 as *const i8, _v9) };
    let _v11: i32 = 0;
    __retval = _v11;
    let _v12: i32 = __retval;
    std::process::exit(_v12 as i32);
}
