tests/snapshots/ptr_member_store_unsafe.snap
---
source: tests/snapshot.rs
expression: rust
---
#![feature(c_variadic)]
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

#[repr(C)]
#[derive(Clone, Copy)]
struct inner {
    start: i32,
    end: i32,
}


#[repr(C)]
#[derive(Clone, Copy)]
struct outer {
    buf: inner,
    error: i32,
}


unsafe extern "C" {
    fn printf(_0: *const i8, ...) -> i32;
}

fn bump(arg1: *mut i32) {
    let mut p: *mut i32 = std::ptr::null_mut();
    p = arg1;
    let _v0: *mut i32 = p;
    let _v1: i32 = unsafe { *_v0 };
    let _v2: i32 = 10;
    let _v3: i32 = _v1 + _v2;
    let _v4: *mut i32 = p;
    unsafe {
        *_v4 = _v3;
    }
    return;
}

fn init(arg0: *mut outer) {
    let mut o: *mut outer = std::ptr::null_mut();
    o = arg0;
    let _v0: i32 = 1;
    let _v1: *mut outer = o;
    unsafe {
        (*_v1).buf.start = _v0;
    }
    let _v2: i32 = 2;
    let _v3: *mut outer = o;
    unsafe {
        (*_v3).buf.end = _v2;
    }
    let _v4: i32 = 0;
    let _v5: *mut outer = o;
    unsafe {
        (*_v5).error = _v4;
    }
    let _v6: *mut outer = o;
    bump(unsafe { std::ptr::addr_of_mut!((*_v6).buf.start) });
    return;
}

fn main() {
    let mut __retval: i32 = 0;
    let mut o: outer = outer { buf: inner { start: 0, end: 0 }, error: 0 };
    let _v0: i32 = 0;
    __retval = _v0;
    init(std::ptr::addr_of_mut!(o));
    let _v1: *mut i8 = b"%d %d %d\n\0".as_ptr() as *mut i8;
    let _v2: i32 = o.buf.start;
    let _v3: i32 = o.buf.end;
    let _v4: i32 = o.error;
    let _v5: i32 = unsafe { printf(_v1 as *const i8, _v2, _v3, _v4) };
    let _v6: i32 = 0;
    __retval = _v6;
    let _v7: i32 = __retval;
    std::process::exit(_v7 as i32);
}
