tests/snapshots/qsort_bsearch_fixup.snap
---
source: tests/snapshot.rs
expression: rust
---
#![feature(c_variadic)]
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

#[repr(C)]
#[derive(Clone, Copy)]
struct Item {
    key: i32,
    value: i32,
}


unsafe extern "C" {
    fn qsort(_0: *mut core::ffi::c_void, _1: usize, _2: usize, _3: Option<unsafe extern "C" fn(*mut core::ffi::c_void, *mut core::ffi::c_void) -> i32>);
    fn bsearch(_0: *const core::ffi::c_void, _1: *const core::ffi::c_void, _2: usize, _3: usize, _4: Option<unsafe extern "C" fn(*mut core::ffi::c_void, *mut core::ffi::c_void) -> i32>) -> *mut core::ffi::c_void;
    fn printf(_0: *const i8, ...) -> i32;
}

extern "C" fn cmp_int(arg2: *mut core::ffi::c_void, arg3: *mut core::ffi::c_void) -> i32 {
    let mut a: *mut core::ffi::c_void = std::ptr::null_mut();
    let mut b: *mut core::ffi::c_void = std::ptr::null_mut();
    let mut __retval: i32 = 0;
    a = arg2;
    b = arg3;
    let _v0: *mut core::ffi::c_void = a;
    let _v1: *mut i32 = _v0 as *mut i32;
    let _v2: i32 = unsafe { *_v1 };
    let _v3: *mut core::ffi::c_void = b;
    let _v4: *mut i32 = _v3 as *mut i32;
    let _v5: i32 = unsafe { *_v4 };
    let _v6: i32 = _v2 - _v5;
    __retval = _v6;
    let _v7: i32 = __retval;
    return _v7;
}

extern "C" fn cmp_item(arg0: *mut core::ffi::c_void, arg1: *mut core::ffi::c_void) -> i32 {
    let mut a: *mut core::ffi::c_void = std::ptr::null_mut();
    let mut b: *mut core::ffi::c_void = std::ptr::null_mut();
    let mut __retval: i32 = 0;
    let mut ia: *mut Item = std::ptr::null_mut();
    let mut ib: *mut Item = std::ptr::null_mut();
    a = arg0;
    b = arg1;
    let _v0: *mut core::ffi::c_void = a;
    let _v1: *mut Item = _v0 as *mut Item;
    ia = _v1;
    let _v2: *mut core::ffi::c_void = b;
    let _v3: *mut Item = _v2 as *mut Item;
    ib = _v3;
    let _v4: *mut Item = ia;
    let _v5: i32 = unsafe { (*_v4).key };
    let _v6: *mut Item = ib;
    let _v7: i32 = unsafe { (*_v6).key };
    let _v8: i32 = _v5 - _v7;
    __retval = _v8;
    let _v9: i32 = __retval;
    return _v9;
}

fn main() {
    let mut __retval: i32 = 0;
    let mut nums: aligned::Aligned<aligned::A16, [i32; 5]> = aligned::Aligned([0; 5]);
    let mut key: i32 = 0;
    let mut hit: *mut i32 = std::ptr::null_mut();
    let mut items: aligned::Aligned<aligned::A16, [Item; 4]> = aligned::Aligned([Item { key: 0, value: 0 }; 4]);
    let mut needle: Item = Item { key: 0, value: 0 };
    let mut found: *mut Item = std::ptr::null_mut();
    let _v0: i32 = 0;
    __retval = _v0;
    *nums = [4, 1, 5, 3, 2];
    let _v1: i32 = 3;
    key = _v1;
    let _v2: *mut i32 = nums.as_mut_ptr() as *mut i32;
    let _v3: *mut core::ffi::c_void = _v2 as *mut core::ffi::c_void;
    let _v4: u64 = 5;
    let _v5: u64 = 4;
    unsafe { qsort(_v3 as *mut core::ffi::c_void, _v4 as usize, _v5 as usize, Some(cmp_int)) };
    let _v6: *mut core::ffi::c_void = std::ptr::addr_of_mut!(key) as *mut core::ffi::c_void;
    let _v7: *mut i32 = nums.as_mut_ptr() as *mut i32;
    let _v8: *mut core::ffi::c_void = _v7 as *mut core::ffi::c_void;
    let _v9: u64 = 5;
    let _v10: u64 = 4;
    let _v11: *mut core::ffi::c_void = unsafe { bsearch(_v6 as *const core::ffi::c_void, _v8 as *const core::ffi::c_void, _v9 as usize, _v10 as usize, Some(cmp_int)) };
    let _v12: *mut i32 = _v11 as *mut i32;
    hit = _v12;
    *items = [Item { key: 3, value: 30 }, Item { key: 1, value: 10 }, Item { key: 4, value: 40 }, Item { key: 2, value: 20 }];
    needle = Item { key: 4, value: 0 };
    let _v13: *mut Item = items.as_mut_ptr() as *mut Item;
    let _v14: *mut core::ffi::c_void = _v13 as *mut core::ffi::c_void;
    let _v15: u64 = 4;
    let _v16: u64 = std::mem::size_of::<Item>() as u64;
    unsafe { qsort(_v14 as *mut core::ffi::c_void, _v15 as usize, _v16 as usize, Some(cmp_item)) };
    let _v17: *mut core::ffi::c_void = std::ptr::addr_of_mut!(needle) as *mut core::ffi::c_void;
    let _v18: *mut Item = items.as_mut_ptr() as *mut Item;
    let _v19: *mut core::ffi::c_void = _v18 as *mut core::ffi::c_void;
    let _v20: u64 = 4;
    let _v21: u64 = std::mem::size_of::<Item>() as u64;
    let _v22: *mut core::ffi::c_void = unsafe { bsearch(_v17 as *const core::ffi::c_void, _v19 as *const core::ffi::c_void, _v20 as usize, _v21 as usize, Some(cmp_item)) };
    let _v23: *mut Item = _v22 as *mut Item;
    found = _v23;
    let _v24: *mut i8 = b"%d %d %d %d\n\0".as_ptr() as *mut i8;
    let _v25: i64 = 0;
    let _v26: i32 = nums[(_v25 as usize)];
    let _v27: i64 = 4;
    let _v28: i32 = nums[(_v27 as usize)];
    let _v29: *mut i32 = hit;
    let _v30: bool = _v29 != std::ptr::null_mut();
    let _v31: i32 = if _v30 {
        let _v32: *mut i32 = hit;
        let _v33: i32 = unsafe { *_v32 };
        _v33
    } else {
        let _v34: i32 = -1;
        _v34
    };
    let _v35: *mut Item = found;
    let _v36: bool = _v35 != std::ptr::null_mut();
    let _v37: i32 = if _v36 {
        let _v38: *mut Item = found;
        let _v39: i32 = unsafe { (*_v38).value };
        _v39
    } else {
        let _v40: i32 = -1;
        _v40
    };
    let _v41: i32 = unsafe { printf(_v24 as *const i8, _v26, _v28, _v31, _v37) };
    let _v42: i32 = 0;
    __retval = _v42;
    let _v43: i32 = __retval;
    std::process::exit(_v43 as i32);
}
